--- a/signup.html
+++ b/signup.html
@@ -1,55 +1,16 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="./signupcss.css" />
+        <title>Nidaa</title>
+    </head>
     <style>
-        body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box}
-
-input[type=text], input[type=password] , input[type=email] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
-}
-
-input[type=text]:focus, input[type=password]:focus , input[type=email]:focus{
-  background-color: #ddd;
-  outline: none;
-}
-input[type=date], input[type=phone]  {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
-}
-
-input[type=date]:focus, input[type=phone]:focus  {
-  background-color: #ddd;
-  outline: none;
-}
-
-
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
-
-button {
-  background-color: #0d593d;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  width: 50%;
-  opacity: 0.9;
-}
+    
     </style>
     <body>
         <h1>Sign Up Form</h1>
-        <fieldset>
             <H3>Please Fill this form to created acount</H3>
-            <form action="https://formspree.io/f/" method="post">
+            <form action="https://formspree.io/f/xleveaqy" method="post">
+            <fieldset>
             <label for="text">Full Name:</label>
             <input name="text" placeholder="Enter Full Name" type="text" required><br>
             <label for="email">Email:</label>
@@ -88,7 +49,7 @@ button {
             <input type="checkbox" placeholder="checkbox" name="checkbox">
             <label for="checkbox">I agree to terms and conditions</label><br>
             <button type="submit">Submit</button>
+            </fieldset>
           </form>
-        </fieldset>
     </body>
 </html>
